--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -26,44 +26,47 @@
 
             <div class="subcontenedor">
               <!--Titulación-->   
-              <div class="bloque activo" id="bloquePreguntasFrecuentesTitulacion">
-                <div class="pf card border-0 py-3 px-3" id="spsuctsss" >
-
-                <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
-                <a>
-                  Se puede trabajar el certificado total siempre y cuando se cumpla con:
-                  <br/><br/>
-                  -Documentación digital completa.<br/>
-                  -Pago de documento o colegiatura final.<br/>
-                  -Avance curricular  con el 100% y estatus de egresado.
-                  <br/><br/>
-                  El trámite de titulación quedará pausado hasta la liberación del servicio social, posteriormente el egresado  se tiene que comunicar para solicitar seguimiento.
-                </a>
-
+              <div class="bloque activo m-0" id="bloquePreguntasFrecuentesTitulacion">
+                
+                <div class="card border-customrec  my-3 h-100">
+                  <div class="card-header border-customrec">
+                    <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
+                  </div>
+                  <div class="card-body">                       
+                    <a>
+                      Se puede trabajar el certificado total siempre y cuando se cumpla con:
+                      <br/><br/>
+                      -Documentación digital completa.<br/>
+                      -Pago de documento o colegiatura final.<br/>
+                      -Avance curricular  con el 100% y estatus de egresado.
+                      <br/><br/>
+                      El trámite de titulación quedará pausado hasta la liberación del servicio social, posteriormente el egresado  se tiene que comunicar para solicitar seguimiento.
+                    </a>
+                  </div>
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="ctdetdt" >
-
-                <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>
-                <a>
-                  El trámite dura un tiempo estimado de 8 meses. En ocasiones se puede extender por situaciones internas o externas.
-                </a>
-
+                <div class="card border-customrec my-3 h-100">
+                  <div class="card-header border-customrec">
+                    <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>    
+                  </div>
+                  <div class="card-body">                       
+                    El trámite dura un tiempo estimado de 8 meses. En ocasiones se puede extender por situaciones internas o externas.
+                  </div>
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="qdenpetdt" >
-
-                <h6><b>¿Qué documentación es necesaria para el trámite de titulación?</b></h6>
-                <a>
-                  Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
+                <div class="card border-customrec my-3 h-100">
+                  <div class="card-header border-customrec">
+                    <h6><b>¿Qué documentación es necesaria para el trámite de titulación?</b></h6>
+                  </div>
+                  <div class="card-body">                       
+                    Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
                   <br/><br/>
                   Antecedentes académicos (certificado de estudios). <br/>
                   Título (maestrías y doctorados). <br/>
                   Acta de nacimiento. <br/>
                   CURP.
-                </a>
-
-                </div>
+                  </div>
+                </div>            
 
                 <div class="pf card border-0 py-3 px-3" id="ceecdpdt" >
 
@@ -405,6 +408,7 @@
 
                   Si, se puede solicitar la elaboración de la documentación que emite escolares en físico, siempre y cuando el documento que se solicitó no este incluido en algún paquete o promoción ya que estos documentos solo se entregan en digital.                  
 
+              </div>
               </div>
 
               <!--Éxito estudiantil-->   
