--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -721,8 +721,8 @@
             <div>
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                     <b>UNAG Maestría</b>
                     </div>
                     <div class="card-body">                   
@@ -748,8 +748,8 @@
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                       <b>UNAG Doctorado</b>
                     </div>
                     <div class="card-body">  
@@ -775,8 +775,8 @@
                 </div>
 
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                       <b>ÚNICA</b>
                     </div>
                     <div class="card-body">                   
@@ -807,8 +807,8 @@
 
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                       <b>UVE Bachillerato</b>
                     </div>
                     <div class="card-body">                   
@@ -838,8 +838,8 @@
                 </div>
 
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                       <b>UVE Licenciatura</b>
                     </div>
                     <div class="card-body">                   
@@ -879,8 +879,8 @@
             
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec">
                       Regular:
                     </div>
                     <div class="card-body">                   
@@ -891,8 +891,8 @@
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <div class="card-header">
+                  <div class="card border-customrec h-100">
+                    <div class="card-header border-customrec ">
                       Revalidación de estudios:
                     </div>
                     <div class="card-body">
