--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -566,60 +566,100 @@
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
               <div class="col">
               <div class="card border-0 mb-3" >
-                  <div class="row g-0">
+                <div class="row g-0">
 
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="card-title text-center">Certificado parcial</h5>
-                        <p class="card-text" style="text-align: justify;">     
-                          
-                          Documento que se proporciona al alumno, con el cual puede comprobar el avance curricular cursado al momento, 
-                          emitido por la SEP. El proceso de certificación demora un estimado de 2 meses y el documento se comparte en digital en 
-                          archivo pdf y xml.</br></br>
-      
-                          Se deberán cubrir los siguientes requisitos:</br>
-                          ● No tener saldos pendientes </br>
-                          ● Pago del documento </br>
-                          ● Documentación completa </br>
-                          
-                        </p>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-center">Certificado parcial</h5>
+                      <p class="card-text" style="text-align: justify;">     
+                        
+                        Documento que se proporciona al alumno, con el cual puede comprobar el avance curricular cursado al momento, 
+                        emitido por la SEP. El proceso de certificación demora un estimado de 2 meses y el documento se comparte en digital en 
+                        archivo pdf y xml.</br></br>
+    
+                        Se deberán cubrir los siguientes requisitos:</br>
+                        ● No tener saldos pendientes </br>
+                        ● Pago del documento </br>
+                        ● Documentación completa </br>
+                        
+                      </p>
 
-                      </div>
                     </div>
-
-                    <div class="col-md-4">
-                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/cerpar1.png"></button>
-
-                      <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
-                      <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasBottomLabel4"></h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                      </div>
-                      <div class="container card border border-0">
-        
-                        <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-        
-                          <div class="col">
-
-                            <img src="img/titulacion/cerpar1.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                            
-                          </div>
-                          
-                          <div class="col card border border-0" style="text-align: justify;">
-        
-                            <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
-                            Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
-                            autenticado por la Secretaría de Educación Pública. </br></br>
-
-                            Para obtener un certificado parcial se debe tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
-                            digital completo.
-                          </div>
-                        </div>   
-                      </div>
-                      </div> 
-                    </div>
-                    
                   </div>
+
+                  <div class="col-md-4">
+                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/cerpar1.png"></button>
+
+                    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabel4"></h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="container card border border-0">
+      
+                      <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+      
+                        <div class="col">
+
+                          <img src="img/titulacion/cerpar1.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                          
+                        </div>
+                        
+                        <div class="col card border border-0" style="text-align: justify;">
+      
+                          <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
+                          Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
+                          autenticado por la Secretaría de Educación Pública. </br></br>
+
+                          Para obtener un certificado parcial se debe tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
+                          digital completo.
+                        </div>
+                      </div>   
+                    </div>
+                    </div> 
+                  </div>
+                  
+                </div>
+                <div class="row g-0">
+
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-center">Acta de titulación</h5>
+                      <p class="card-text" style="text-align: justify;">     
+                                               
+                      </p>
+
+                    </div>
+                  </div>
+
+                  <div class="col-md-4">
+                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/cerpar1.png"></button>
+
+                    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabel4"></h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="container card border border-0">
+      
+                      <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+      
+                        <div class="col">
+
+                          <img src="img/titulacion/acta titu.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                          
+                        </div>
+                        
+                        <div class="col card border border-0" style="text-align: justify;">
+      
+                          
+                        </div>
+                      </div>   
+                    </div>
+                    </div> 
+                  </div>
+                  
+                </div>
               </div>
               </div>
               
