--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -633,11 +633,11 @@
                   </div>
 
                   <div class="col-md-4">
-                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/cerpar1.png"></button>
+                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottomacta" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/actatitu.png"></button>
 
-                    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
+                    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomacta" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasBottomLabel4"></h5>
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabelacta"></h5>
                       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="container card border border-0">
@@ -646,7 +646,7 @@
       
                         <div class="col">
 
-                          <img src="img/titulacion/acta titu.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                          <img src="img/titulacion/actatitu.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           
                         </div>
                         
