--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -599,14 +599,14 @@
           
           <a>
 
-              Los tiempos son aproximados y sujetos a la autoridad educativa.</br></br>  
+              Los tiempos son aproximados y sujetos a la autoridad educativa. El estimado actualmente es de 60 a 90 días hábiles.</br></br>  
               
               La gestión del trámite se lleva a cabo directamente en Utel y solo se podrá iniciar una vez que tengas
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
               consiste en:</br></br>  
 
-              <h6>1. Llenar la Solicitud de Equivalencia académica de Título de Utel en USA.</h6></br></br>    
-              <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
+              <h6>1. Llenar la Solicitud de Equivalencia académica de Título de Utel en USA.</h6></br>
+              <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6>
                 ● Envío de documentos a USA</br> 
                 ● Traducción oficial del Título de Utel (en USA)</br> 
                 ● Procedimiento de revalidación ante Agencia Acreditadora (en USA)</br> 
