--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -626,6 +626,38 @@
               ● Requiere que el alumno/ex alumno proporcione la guía de paquetería<br/>
             </P>
 
+            <h4><b>Seguimiento de envíos</b></h4>
+
+            <p>
+              Al rastrear los paquetes enviados por cualquiera de los motivos descritos anteriormente, es posible observar diferentes estados, tales como los siguientes:
+            </p>
+
+            <p>
+              <b>En preparación/Etiqueta creada/Creado:</b> Se refiere a la generación de la guía de envío que se utilizará para enviar los documentos. Aunque el paquete aún no haya comenzado su tránsito programado.
+              <br/><br/>
+              <b>Recolectado/Tenemos tu paquete:</b> Esta notificación indica que tu paquete ha sido preparado y entregado a un recolector de la paquetería para continuar su envío. En este punto, puedes rastrear su ubicación a través de la página de la paquetería
+              <br/><br/>
+              <b>En tránsito/En camino/Salida de oficina/Embarcado en ruta de entrega:</b> El paquete está en camino hacia su destino con el proveedor de paquetería designado.
+              <br/><br/>
+              <b>Entregado:</b> El paquete ha sido entregado en la dirección indicada. Es importante que el destinatario verifique el nombre de la persona que firmó por él en la página, especialmente si no lo recibió personalmente. En caso de no reconocer la entrega, es necesario informar a la universidad para reportar que no se reconoce la recepción del paquete.
+              <br/><br/>
+              <b>Listo para ser recogido en oficina:</b> Este estado indica que tu paquete ha llegado a la sucursal designada para su recolección. Es importante tener en cuenta que dispones de un plazo de 5 días hábiles para recoger el paquete y evitar que sea devuelto a la universidad.
+              <br/><br/>
+              Al rastrear tu paquete, podrás visualizar diversos estados que pueden indicar la ocurrencia de incidencias durante el tránsito. Algunas de estas situaciones pueden requerir que te pongas en contacto para obtener más información. Entre las posibles incidencias se encuentran las siguientes:
+              <br/><br/>
+              <b>Dirección incorrecta:</b> La empresa de paquetería no ha logrado localizar la dirección de entrega con la información provista previamente (esto incluye las guías contratadas por el alumno/exalumno/egresado). En estas situaciones, tanto la empresa de paquetería como la universidad pueden contactarte para verificar los datos o solicitar más información. En caso contrario, es importante informar a la universidad
+              <br/><br/>
+              <b>Reimpresión de etiqueta logística:</b> Este término se utiliza principalmente cuando se modifican los datos de entrega, indicando generalmente el inicio del proceso de devolución del paquete.
+              <br/><br/>
+              <b>Intentamos entregar, destinatario no atendió la visita/No entregado (primera visita):</b> La paquetería informa que se realizó un primer intento de entrega en el domicilio, pero no hubo respuesta para la recepción del paquete, lo que impidió completar la entrega.
+              <br/><br/>
+              <b>Recibido en oficina de tránsito (Demora en LH por factor externo):</b> Este estado indica que el retraso en el tránsito del paquete se debe a factores externos a la paquetería, lo que resulta en una demora en la entrega respecto a la fecha estimada.
+              <br/><br/>
+              <b>No entregado (retraso en ruta):</b> Este estado indica que factores relacionados con la paquetería han causado demoras en el envío del paquete, lo que puede afectar la fecha estimada de entrega.
+              <br/><br/>
+              <b>Devolución:</b> El paquete ha sido enviado de regreso a la universidad. Esto puede ser debido a que no fue recogido en la sucursal de entrega programada o a la imposibilidad de establecer contacto con el destinatario para obtener la información de entrega correcta.
+            </p>
+
             <div class="border-3 card card-aviso mx-3 mb-3 justify-content-center ">
               <div class="card-body">
                 <p class="card-text">
@@ -639,61 +671,15 @@
             <p style="text-align: justify;">
               Se encarga de recibir todos los documentos que los alumnos  envían a través de paquetería, dirigidos a la Dirección de servicios escolares y regulación. Principalmente para  la conformación de expediente escolar u otros fines. Una vez identificada el área de destino, se procede con la entrega al personal correspondiente.
             </P>
-              <h4><b>¿Qué es la dictaminación?</b></h4>
-            
-            <p style="text-align: justify;">
-              Proceso institucional para corroborar que los elementos de forma y validez del certificado de estudios del alumno cumplan con los lineamientos establecidos para su registro, integración y resguardo.
-              <br/><br/>
-              Para realizar este proceso es importante que los documentos se encuentren escaneados legibles, que se visualicen las 4 esquinas, completos,  que estén todas las hojas que integran el Certificado de Estudios, siempre por ambos lados. 
-              <br/><br/>
-              Si los documentos digitales no son ilegibles se rechazan y se piden escaneos correctos. Apoyándonos con el área de Recolección 
 
-            </P>
-
-            <h4 class="text-center"><b>Proceso</b></h4>
-
-            <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
-              <div class="col">
-                <div class="card border-0 mb-3" >
-                    <div class="row g-0">
-
-                      <div class="col-lg-5">
-                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/dicdocs.png">                        
-                      </div>
-
-                      <div class="col-lg-7">
-                        <div class="card border-0 mb-3 py-2" style="display: block;">
-
-                          <h4 class="text-center" >Constancia de autenticidad</h4>
-                          
-                          <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.PN">
-                          
-                        </div>
-
-                        <div class="card border-0 mb-3 py-2" style="display: block;">
-
-                          <h4 class="text-center" >Aviso para el alumno</h4>
-                          
-                          <img class="mx-auto d-block img-fluid" src="img/Recoleccion/infoalumnos.PNG">
-                          
-                        </div>  
-                      </div>
-
-                      <div class="border-3 card card-aviso mx-3 mb-3 justify-content-center ">
-                        <div class="card-body">
-
-                          <p class="card-text">
-                            DAPO: es el el nombre de la solicitud proceso de detección de documentación que carece de validez oficial.
-                          </p>
-                        </div>
-                      </div>
-
-                      
-                    </div>
-                </div>
+            <div class="border-3 card card-aviso mx-3 mb-3 justify-content-center ">
+              <div class="card-body">
+                <p class="card-text">
+                  *NOTA: Para garantizar la entrega adecuada del paquete, es fundamental incluir el nombre de la persona a la que va dirigido en los datos de la guía, evitando únicamente colocar el nombre de la escuela (Utel Universidad/Scala Higher Education S.C)
+                </p>
               </div>
             </div>
-            -->
+
           </div>
 
         </div>
