--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -297,7 +297,7 @@
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
                   Documento que hace constar el estatus de los estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
-                  *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
+                  La entrega del documento puede ser tanto digital como física. *Nota: La información que se encuentra actualmente 
                   en SIU es la misma que se plasmará en el documento solicitado. Es importante que el alumno revise que esté correcta ya que no habrá cambios. Hay que tomar en cuenta que calificaciones se actualizan 
                   luego de una semana de cerrado el curso.
                   <br/><br/>
@@ -336,7 +336,7 @@
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo el alumno debe tener cursado mínimo un cuatrimestre del programa inscrito 
-                  y el expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
+                  y el expediente digital completo. La entrega del documento puede ser tanto digital como física. *Nota: La información que se encuentra 
                   actualmente en SIU es la misma que se plasmará en el documento solicitado. Es importante que el alumno revise que la información es correcta ya que no habrá cambios.
                   <br/><br/>
                   
