--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -626,7 +626,7 @@
                     <div class="card-body">
                       <h5 class="card-title text-center">Acta de titulación</h5>
                       <p class="card-text" style="text-align: justify;">     
-                                               
+                        El acta de titulación suele contener información importante, como el nombre completo del estudiante, el título obtenido, la carrera o programa de estudio, la fecha de graduación, el número de créditos o unidades académicas completadas, y cualquier otra información relevante que confirme que el estudiante ha completado satisfactoriamente todos los requisitos para obtener su título universitario.                   
                       </p>
 
                     </div>
@@ -651,8 +651,11 @@
                         </div>
                         
                         <div class="col card border border-0" style="text-align: justify;">
-      
-                          
+                          Un acta de titulación es un documento oficial emitido por una institución educativa, generalmente una universidad, que certifica que un estudiante ha cumplido con todos los requisitos académicos necesarios para obtener un título universitario en un campo específico de estudio.
+                          <br/><br/>
+                          El acta de titulación suele contener información importante, como el nombre completo del estudiante, el título obtenido, la carrera o programa de estudio, la fecha de graduación, el número de créditos o unidades académicas completadas, y cualquier otra información relevante que confirme que el estudiante ha completado satisfactoriamente todos los requisitos para obtener su título universitario.
+                          <br/><br/>
+                          Este documento es fundamental para que los graduados universitarios puedan validar oficialmente su logro académico y presentarlo ante empleadores, instituciones educativas o cualquier otra entidad que requiera evidencia de su formación y capacitación en un campo específico.
                         </div>
                       </div>   
                     </div>
