--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -115,6 +115,10 @@
           ● Contar con el 70% de créditos<br/>
           ● Tener documentación física completa (Acta de nacimiento y Certificado de bachillerato)<br/>
 
+          <br/>
+          Para el servicio social regular se cubrirán 480 horas en un periodo mínimo de 6 meses y máximo de 2 años.
+
+
         </div>
 
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
