--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -603,7 +603,7 @@
               <div class="col-md-6 p-5">
                 <!--Ejemplo-->
                 <div class="col text-center p-6">
-                  <img style="cursor: zoom-in;" src="img/escolares/Titulo2_intermedio.PNG" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia">
+                  <img style="cursor: zoom-in;" src="img/escolares/Titulo_intermedio.png" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia">
                 </div>
                 
               </div>
@@ -611,7 +611,7 @@
               <div class="col-md-6">
                 <!--Ejemplo-->
                 <div class="col text-center p-5">
-                  <img style="cursor: zoom-in;" src="img/escolares/Titulo2_intermedio.png" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2">
+                  <img style="cursor: zoom-in;" src="img/escolares/Titulo_intermedio.png" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2">
                 </div>
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
