Actualizamos url de España

--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -383,7 +383,7 @@
                                 <b>Apostilla título</b>: SI</br> 
                                 <b>Apostilla certificada</b>: </br> 
                                 <b>Certificado de programa académico -CPA</b>: Si</br> 
-                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
+                                <a href="https://universidades.sede.gob.es/pagina/index/directorio/Homologaciones_InfoGeneral" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
